--- a/integrations/eclipse/org.eclipse.visualvm.launcher.pde/plugin.xml
+++ b/integrations/eclipse/org.eclipse.visualvm.launcher.pde/plugin.xml
@@ -8,7 +8,7 @@
             delegateDescription="The VisualVM Launcher supports running and debugging PDE applications and initiating their monitoring in VisualVM"
             id="org.eclipse.visualvm.launcher.pde"
             modes="run,debug"
-            name="VIsualVM"
+            name="VisualVM"
             sourceLocatorId="org.eclipse.visualvm.launch.core.pde.sourceLocator"
             sourcePathComputerId="org.eclipse.visualvm.launch.core.pde.sourcePathComputer"
             type="org.eclipse.pde.ui.RuntimeWorkbench">
