Fixed Issue 201 - Cannot profile different JDK than the VisualVM is running  - Calibration is performed automatically for not calibrated JDKs when starting the profiling session
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1582 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -14,15 +14,17 @@ MSG_profiling_paused=profiling paused
 
 MSG_refreshing=refreshing...
 
-MSG_profiling_running_methods=Profiling running ({0} methods instrumented)
+MSG_calibration_progress=calibration in progress...
 
-MSG_profiling_running_classes_1=Profiling running ({0} classes instrumented, tracking each object)
+MSG_profiling_running_methods=profiling running ({0} methods instrumented)
 
-MSG_profiling_running_classes_2=Profiling running ({0} classes instrumented, tracking each 2nd object)
+MSG_profiling_running_classes_1=profiling running ({0} classes instrumented, tracking each object)
 
-MSG_profiling_running_classes_3=Profiling running ({0} classes instrumented, tracking each 3rd object)
+MSG_profiling_running_classes_2=profiling running ({0} classes instrumented, tracking each 2nd object)
 
-MSG_profiling_running_classes_N=Profiling running ({0} classes instrumented, tracking each {1}th object)
+MSG_profiling_running_classes_3=profiling running ({0} classes instrumented, tracking each 3rd object)
+
+MSG_profiling_running_classes_N=profiling running ({0} classes instrumented, tracking each {1}th object)
 
 MSG_profiling_of=<nobr>profiling of <a href='#'>
 
