Implemented Issue 170 - Add Compare Memory Snapshots action to context menu  - Added Compare action for two selected memory snapshots
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1584 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -52,6 +52,12 @@ LBL_Status=Status:
 
 MSG_Profiling_results=Profiling results
 
+MSG_Compare_Snapshots=&Compare
+
+DESCR_Compare_Snapshots=Compare profiler snapshots
+
+MSG_Not_Comparable=<html><b>Selected snapshots are not comparable.</b><br><br>Check snapshots type and settings.</html>
+
 MSG_Profile=&Profile
 
 DESCR_Profile=Profile
