--- a/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
+++ b/visualvm/profiler/src/com/sun/tools/visualvm/profiler/Bundle.properties
@@ -68,6 +68,10 @@ MSG_Profiler_Snapshot=Pro&filer Snapshot
 
 DESCR_Profiler_Snapshot=Profiler Snapshot
 
+LBL_Snapshots_Comparison=Snapshots Comparison
+
+DESCR_Snapshots_Comparison=Profiler Snapshots Comparison\: {0} compared to {1}
+
 MSG_Profiler_Snapshots=Profiler Snapshots
 
 MSG_Opening_Profiler_Snapshot=Opening Profiler Snapshot...
