--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -6,8 +6,10 @@ modules=\
     ${project.org.netbeans.modules.consumervisualvm}:\
     ${project.org.netbeans.modules.consumerentrypoints}:\
     ${project.org.netbeans.modules.extensions}:\
-    ${project.com.sun.tools.visualvm.modules.systray}
+    ${project.com.sun.tools.visualvm.modules.systray}:\
+    ${project.com.sun.tools.visualvm.application.type.custom}
 project.com.sun.appserv.management=glassfish/amx-api
+project.com.sun.tools.visualvm.application.type.custom=extapptypes
 project.com.sun.tools.visualvm.modules.jconsole=jconsole
 project.com.sun.tools.visualvm.modules.mbeans=mbeans
 project.com.sun.tools.visualvm.modules.systray=systray
