--- a/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/about/Bundle.properties
+++ b/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/about/Bundle.properties
@@ -45,3 +45,19 @@ LBL_Cannot_open_the_logfile=Cannot open the logfile {0}
 LBL_Error=Error
 
 LBL_Logfile_Viewer_=Logfile Viewer ({0})
+
+BTN_Copy_Clipboard=C&opy to Clipboard
+
+CAPTION_Copy_Clipbard=Copy To Clipboard
+
+MSG_Copy_Clipboard=<html>Details copied to the clipboard.</html>
+
+BTN_Save_file=&Save to File
+
+CAPTION_Save_logfile=Save Logfile As
+
+MSG_Saving_logfile=Saving logfile to {0}
+
+CAPTION_Save_logfile_failed=Save Logfile Failed
+
+MSG_Save_logfile_failed=Saving the logfile to the selected destination failed.
