Minor logfile viewer improvement  - an informational message is displayed instead of empty logfile on VisualVM startup
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1593 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/about/Bundle.properties
+++ b/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/about/Bundle.properties
@@ -61,3 +61,5 @@ MSG_Saving_logfile=Saving logfile to {0}
 CAPTION_Save_logfile_failed=Save Logfile Failed
 
 MSG_Save_logfile_failed=Saving the logfile to the selected destination failed.
+
+MSG_Logfile_notready=Logfile is not ready yet.\nPlease close the logfile viewer and open it again after a while.
