* usability improvements in application type form * saving application type config using synthetic name instead of its display name * improved resolving of icons
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1596 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/extapptypes/src/com/sun/tools/visualvm/modules/customtype/ui/Bundle.properties
+++ b/plugins/extapptypes/src/com/sun/tools/visualvm/modules/customtype/ui/Bundle.properties
@@ -23,7 +23,7 @@ ApplicationTypeForm.appTypeUrl.text=
 ApplicationTypeForm.appTypeMainClass.text=
 ApplicationTypeForm.appTypeName.text=
 ApplicationTypeForm.jLabel4.text=Icon:
-ApplicationTypeForm.nameLabel.text=Name(*):
+ApplicationTypeForm.nameLabel.text=Name:
 ApplicationTypeForm.mainClassLabel.text=Main Class:
 ApplicationTypeForm.urlLabel.text=Info URL:
 ApplicationTypeForm.jTextPane1.contentType=text/html
