Custom Application Types: * improvements and fixes * added option panel for custom applicaiton types management
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1598 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/extapptypes/src/com/sun/tools/visualvm/modules/customtype/options/Bundle.properties
+++ b/plugins/extapptypes/src/com/sun/tools/visualvm/modules/customtype/options/Bundle.properties
@@ -17,15 +17,11 @@
 # 2 along with this work; if not, write to the Free Software Foundation,
 # Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301 USA.
  *
-ApplicationTypeForm.descriptionLabel.text=Description:
-ApplicationTypeForm.appTypeUrl.text=
-ApplicationTypeForm.appTypeMainClass.text=
-ApplicationTypeForm.appTypeName.text=
-ApplicationTypeForm.jLabel4.text=Icon:
-ApplicationTypeForm.nameLabel.text=Name:
-ApplicationTypeForm.mainClassLabel.text=Main Class:
-ApplicationTypeForm.urlLabel.text=Info URL:
-ApplicationTypeForm.jTextPane1.contentType=text/html
-ApplicationTypeForm.jTextPane1.text=<html>\n  <span style="color: red">\n   Note: All the changes will be visible only after you have restarted VisualVM or the monitored application\n  </span>\n</html>\n
-ApplicationTypeForm.appTypeIcon.text=
-ApplicationTypeForm.resetIcon.text=Reset Icon
+ApplicationTypeOptionsPanel.jLabel1.text=Application Types
+ApplicationTypeOptionsPanel.jTable1.columnModel.title3=Title 4
+ApplicationTypeOptionsPanel.jTable1.columnModel.title2=Title 3
+ApplicationTypeOptionsPanel.appTypeTable.columnModel.title1=Active
+ApplicationTypeOptionsPanel.appTypeTable.columnModel.title0=Application Type
+ApplicationTypeOptionsPanel.menuNew.text=Create...
+ApplicationTypeOptionsPanel.menuEdit.text=Edit...
+ApplicationTypeOptionsPanel.menuDelete.text=Delete
