use new NetBeans Platform 6.5 and Profiler binaries
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1601 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/nbproject/platform.properties
+++ b/visualvm/nbproject/platform.properties
@@ -1,11 +1,11 @@
 # Deprecated since 5.0u1; for compatibility with 5.0:
 disabled.clusters=\
-    apisupport1,\
     harness
 disabled.modules=\
     org.netbeans.core.execution,\
     org.netbeans.core.output2,\
     org.netbeans.libs.jsr223,\
+    org.netbeans.libs.junit4,\
     org.netbeans.modules.core.kit,\
     org.netbeans.modules.favorites,\
     org.netbeans.modules.options.keymap,\
@@ -13,10 +13,10 @@ disabled.modules=\
     org.openide.compat,\
     org.openide.util.enumerations
 enabled.clusters=\
-    platform7,\
-    profiler2
+    platform9,\
+    profiler3
 nbjdk.active=default
-nbplatform.active=NetBeans_Platform_6.0.1_(Build_200801291616)
+nbplatform.active=NetBeans_Platform_6.5_(Build_081105)
 suite.dir=${basedir}
 netbeans.dest.dir=${suite.dir}/netbeans
 harness.dir=${netbeans.dest.dir}/harness
