--- a/samples/pluggableViewDemoSuite/helloWorldViewPlugin/nbproject/platform.properties
+++ b/samples/pluggableViewDemoSuite/helloWorldViewPlugin/nbproject/platform.properties
@@ -1,7 +1,7 @@
 # Deprecated since 5.0u1; for compatibility with 5.0:
 disabled.clusters=
 enabled.clusters=\
-    platform7,\
-    profiler2,\
+    platform9,\
+    profiler3,\
     visualvm
-nbplatform.active=VisualVM_1.0_RC_
+nbplatform.active=VisualVM_1.1
