manifest with the execution level added
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1624 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/launcher/windows-src/visualvm.rc
+++ b/visualvm/launcher/windows-src/visualvm.rc
@@ -1,5 +1,9 @@
+#include "winuser.h"
+
 // Icon with lowest ID value placed first to ensure application icon
 // remains consistent on all systems.
 
 100 ICON DISCARDABLE "visualvm.ico"
+
+CREATEPROCESS_MANIFEST_RESOURCE_ID RT_MANIFEST "visualvm.exe.manifest"
 
