applicaiton types collection added to the "plugins" suite
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1633 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -7,9 +7,11 @@ modules=\
     ${project.org.netbeans.modules.consumerentrypoints}:\
     ${project.org.netbeans.modules.extensions}:\
     ${project.com.sun.tools.visualvm.modules.systray}:\
-    ${project.com.sun.tools.visualvm.application.type.custom}
+    ${project.com.sun.tools.visualvm.application.type.custom}:\
+    ${project.com.sun.tools.visualvm.modules.customtype.lib}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
+project.com.sun.tools.visualvm.modules.customtype.lib=extapptypes.lib
 project.com.sun.tools.visualvm.modules.jconsole=jconsole
 project.com.sun.tools.visualvm.modules.mbeans=mbeans
 project.com.sun.tools.visualvm.modules.systray=systray
