short description for commandline options added
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1671 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/application/src/com/sun/tools/visualvm/application/options/Bundle.properties
+++ b/visualvm/application/src/com/sun/tools/visualvm/application/options/Bundle.properties
@@ -22,4 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 MSG_NO_APP_PID=Cannot open application with pid {0}
+MSG_OPENPID=open application with process id <arg>
+MSG_OPENID=open application with id <arg>
+
 
