--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/application/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/application/Bundle.properties
@@ -33,3 +33,5 @@ LBL_Display_name=&Display name\:
 LBL_Use_security_credentials=Us&e security credentials
 
 LBL_Save_security_credentials=&Save security credentials
+
+MSG_OPENJMX=open application specified by JMX connection (host:port)
