--- a/visualvm/core/src/com/sun/tools/visualvm/core/snapshot/options/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/snapshot/options/Bundle.properties
@@ -24,4 +24,4 @@
 
 MSG_NO_CATEGORY_FILE=Cannot open file {0}
 
-
+MSG_OPENFILE=open file specified by <arg>, file can be Application snapshot, NetBeans Profiler snapshot or HPROF heap dump.
