--- a/visualvm/core/core.jar/org/netbeans/core/startup/Bundle.properties
+++ b/visualvm/core/core.jar/org/netbeans/core/startup/Bundle.properties
@@ -22,7 +22,7 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-currentVersion=VisualVM {0}
+currentVersion=VisualVM 1.1
 LBL_splash_window_title=Starting VisualVM
 SPLASH_HEIGHT=274
 SPLASH_WIDTH=512
