Generating JavaDoc for VisualVM-JMX
git-svn-id: https://svn.java.net/svn/visualvm~svn/branches/release11@1684 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/build.xml
+++ b/visualvm/build.xml
@@ -161,6 +161,11 @@
                 <include name="*com/sun/tools/visualvm/host/views/*.java"/>
             </fileset>
 
+            <!--group title="VisualVM-JMX" packages="com.sun.tools.visualvm.jmx*"/-->
+            <fileset dir="jmx/src" defaultexcludes="yes">
+                <include name="*com/sun/tools/visualvm/jmx/*.java"/>
+            </fileset>
+
             <!--group title="VisualVM-ThreadDump" packages="com.sun.tools.visualvm.threaddump*"/-->
             <fileset dir="threaddump/src" defaultexcludes="yes">
                 <include name="com/sun/tools/visualvm/threaddump/*.java"/>
