bugfix #233, do not rely on xx.0 version of HotSpot [backported to extensions module for VisualVM 1.0]
git-svn-id: https://svn.java.net/svn/visualvm~svn/branches/release10@1747 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/extensions/src/com/sun/tools/visualvm/modules/extensions/Bundle.properties
+++ b/plugins/extensions/src/com/sun/tools/visualvm/modules/extensions/Bundle.properties
@@ -24,7 +24,8 @@
 
 OpenIDE-Module-Display-Category=Platform
 OpenIDE-Module-Long-Description=\
-    The intent of this module is to add support for additional functionality (such as new JDKs, JVMs, HotSpot versions, ...) not supported by the VisualVM core modules at the time this VisualVM was released.
+    <B>This version 1.0.2 adds support for JDK 6u12.\
+    </B><BR>\nThe intent of this module is to add support for additional functionality (such as new JDKs, JVMs, HotSpot versions, ...) not supported by the VisualVM core modules at the time this VisualVM was released.
 OpenIDE-Module-Name=VisualVM-Extensions
 OpenIDE-Module-Short-Description=Extends VisualVM core functionality.
 
