issue #261, the version resource added visualvm.exe
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1777 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/launcher/windows-src/Makefile
+++ b/visualvm/launcher/windows-src/Makefile
@@ -42,7 +42,7 @@ visualvm_w.exe : visualvm.cpp
 	gcc $(CFLAGS) $(LIBS) visualvm.cpp -o visualvm_w.exe
 	mv visualvm_w.exe ../
 
-visualvm.res : visualvm.rc
+visualvm.res : visualvm.rc version.rc version.h visualvm.exe.manifest
 	windres -o$@ -Ocoff visualvm.rc
 
 clean :
