Bugfix #266 - I18N : "Reset calibration data" and "Reset" are not from Bundle  - I18N fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1813 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/core/src/com/sun/tools/visualvm/core/options/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/options/Bundle.properties
@@ -36,3 +36,5 @@ LBL_Monitored_Data2=Monitored D&ata:
 LBL_Profiler=Profiler
 MSG_Do_Not_Show_Again=Reset Do Not Show Again confirmations:
 BTN_Reset=&Reset
+BTN_Reset2=R&eset
+LBL_ResetData=Reset calibration data:
