Bugfix #267 - I18N: "Snapshot" in toolbar is not from Bundle  - I18N fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1814 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/core/src/com/sun/tools/visualvm/core/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/Bundle.properties
@@ -29,3 +29,4 @@ OpenIDE-Module-Short-Description=VisualVM main module
 com_sun_tools_visualvm_core_update_center=https://visualvm.dev.java.net/uc/updates.xml.gz?{$netbeans.hash.code}
 Services/AutoupdateType/com_sun_tools_visualvm_core_update_center.instance=VisualVM Plugins Center
 Menu/Applications=&Applications
+Toolbars/Snapshot=Snapshot
