Fixed Issue 279 - Tab traversal does not work  - do not override FocusTraversalPolicy for DataSourceWindowTabbedPane  - fix html content in Overview
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1872 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/overview/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/overview/Bundle.properties
@@ -27,9 +27,11 @@ LBL_enabled=enabled
 
 LBL_disabled=disabled
 
-LBL_unknown=<unknown>
+# HTML-formatted: <unknown> (&lt; and &gt; must remain!)
+LBL_unknown=&lt;unknown&gt;
 
-LBL_none=<none>
+# HTML-formatted: <none> (&lt; and &gt; must remain!)
+LBL_none=&lt;none&gt;
 
 LBL_Overview=Overview
 
