experimental plugin for monitoring direct buffers
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1882 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -6,6 +6,7 @@ modules=\
     ${project.org.netbeans.modules.consumervisualvm}:\
     ${project.org.netbeans.modules.consumerentrypoints}:\
     ${project.org.netbeans.modules.extensions}:\
+    ${project.org.netbeans.modules.buffermonitor}:\
     ${project.com.sun.tools.visualvm.modules.systray}:\
     ${project.com.sun.tools.visualvm.application.type.custom}:\
     ${project.com.sun.tools.visualvm.modules.customtype.lib}
@@ -19,6 +20,7 @@ project.net.java.visualvm.modules.glassfish=glassfish
 project.org.netbeans.modules.consumerentrypoints=consumerentrypoints
 project.org.netbeans.modules.consumervisualvm=consumervisualvm
 project.org.netbeans.modules.extensions=extensions
+project.org.netbeans.modules.buffermonitor=buffermonitor
 
 branding.token=visualvm
 branding.dir=none
