module description fixed
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1885 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/buffermonitor/src/com/sun/tools/visualvm/modules/buffermonitor/Bundle.properties
+++ b/plugins/buffermonitor/src/com/sun/tools/visualvm/modules/buffermonitor/Bundle.properties
@@ -22,11 +22,11 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-OpenIDE-Module-Display-Category=Platform
+OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Long-Description=\
     "Buffers" here means direct buffers that are allocated outside of the garbage-collected heap (by ByteBuffer.allocateDirect), and mapped buffers, created by mapping a region of a file into memory (using FileChannel.map).
 OpenIDE-Module-Name=VisualVM-BufferMonitor
-OpenIDE-Module-Short-Description=VisualVM BufferMonitor.
+OpenIDE-Module-Short-Description=VisualVM BufferMonitor
 
 Buffer_Monitor=Buffer Monitor
 LBL_DIRECT=Direct
