Switching to platform & profiler 6.7  - temporarily disabled charts in Host and Application/Monitor, need to implement support for new charts
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1886 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/nbproject/platform.properties
+++ b/visualvm/nbproject/platform.properties
@@ -4,7 +4,6 @@ disabled.clusters=\
 disabled.modules=\
     org.netbeans.core.execution,\
     org.netbeans.core.output2,\
-    org.netbeans.libs.jsr223,\
     org.netbeans.libs.junit4,\
     org.netbeans.modules.core.kit,\
     org.netbeans.modules.favorites,\
@@ -13,10 +12,10 @@ disabled.modules=\
     org.openide.compat,\
     org.openide.util.enumerations
 enabled.clusters=\
-    platform9,\
+    platform10,\
     profiler3
 nbjdk.active=default
-nbplatform.active=NetBeans_Platform_6.5_(Build_081204)
+nbplatform.active=NetBeans_Platform_6.7_RC1_(Build_090526)
 suite.dir=${basedir}
 netbeans.dest.dir=${suite.dir}/netbeans
 harness.dir=${netbeans.dest.dir}/harness
