use 'Buffer Pools' instead of 'Buffer Monitor'
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1894 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/buffermonitor/src/com/sun/tools/visualvm/modules/buffermonitor/Bundle.properties
+++ b/plugins/buffermonitor/src/com/sun/tools/visualvm/modules/buffermonitor/Bundle.properties
@@ -26,9 +26,9 @@ OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Long-Description=\
     "Buffers" here means direct buffers that are allocated outside of the garbage-collected heap (by ByteBuffer.allocateDirect), and mapped buffers, created by mapping a region of a file into memory (using FileChannel.map).
 OpenIDE-Module-Name=VisualVM-BufferMonitor
-OpenIDE-Module-Short-Description=VisualVM BufferMonitor
+OpenIDE-Module-Short-Description=VisualVM Buffer Pools Monitor
 
-Buffer_Monitor=Buffer Monitor
+Buffer_Pools=Buffer Pools
 LBL_DIRECT=Direct
 LBL_MAPPED=Mapped
 LBL_Memory_Used=Memory Used
