Basic charting support built on lib.profiler.charts  - Host | CPU load not implemented yet  - Doesn't work correctly when running on OpenJDK
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1914 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/build.xml
+++ b/visualvm/build.xml
@@ -133,6 +133,12 @@
                 <include name="*com/sun/tools/visualvm/application/views/*.java"/>
             </fileset>
 
+            <!--group title="VisualVM-Charts" packages="ccom.sun.tools.visualvm.charts*"/-->
+            <fileset dir="charts/src" defaultexcludes="yes">
+                <include name="**/*.java"/>
+                <exclude name="com/sun/tools/visualvm/charts/xy/*.java"/>
+            </fileset>
+
             <!--group title="VisualVM-Core" packages="com.sun.tools.visualvm.core*"/-->
             <fileset dir="core/src" defaultexcludes="yes">
                 <include name="**/*.java"/>
