--- a/visualvm/charts/src/com/sun/tools/visualvm/charts/Bundle.properties
+++ b/visualvm/charts/src/com/sun/tools/visualvm/charts/Bundle.properties
@@ -22,56 +22,4 @@
 # CA 95054 USA or visit www.sun.com if you need additional information or
 # have any questions.
 
-LBL_Unknown=unknown
-
-LBL_Monitor=Monitor
-
-LBL_Cpu=CPU
-
-LBL_Cpu_Usage=CPU usage
-
-LBL_Gc_Usage=GC activity
-
-LBL_Memory=Memory
-
-LBL_Heap=Heap
-
-LBL_PermGen=PermGen
-
-LBL_Classes=Classes
-
-LBL_Threads=Threads
-
-LBL_Perform_GC=Perform GC
-
-LBL_Heap_Dump=Heap Dump
-
-LBL_Uptime=Uptime
-
-LBL_Heap_size=Heap size
-
-LBL_Used_heap=Used heap
-
-LBL_Max_Heap=Max heap
-
-LBL_PermGen_size=PermGen size
-
-LBL_Used_PermGen=Used PermGen
-
-LBL_Max_PermGen_size=Max PermGen size
-
-LBL_Total_loaded_classes=Total loaded classes
-
-LBL_Shared_loaded_classes=Shared loaded classes
-
-LBL_Total_unloaded_classes=Total unloaded classes
-
-LBL_Shared_unloaded_classes=Shared unloaded classes
-
-LBL_Live_threads=Live threads
-
-LBL_Daemon_threads=Daemon threads
-
-LBL_Live_threads_peak=Live threads peak
-
-LBL_Started_threads_total=Started threads total
+OpenIDE-Module-Name=VisualVM-Charts
