--- a/visualvm/nbproject/project.properties
+++ b/visualvm/nbproject/project.properties
@@ -19,10 +19,12 @@ modules=\
     ${project.com.sun.tools.visualvm.applicationviews}:\
     ${project.com.sun.tools.visualvm.tools}:\
     ${project.com.sun.tools.visualvm.host.views}:\
-    ${project.com.sun.tools.visualvm.jvm}
+    ${project.com.sun.tools.visualvm.jvm}:\
+    ${project.com.sun.tools.visualvm.charts}
 project.com.sun.tools.visualvm.application=application
 project.com.sun.tools.visualvm.applicationviews=applicationviews
 project.com.sun.tools.visualvm.attach=attach
+project.com.sun.tools.visualvm.charts=charts
 project.com.sun.tools.visualvm.coredump=coredump
 project.com.sun.tools.visualvm.heapdump=heapdump
 project.com.sun.tools.visualvm.host=host
