Minor VisualVM suite cleanup
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1921 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/nbproject/project.properties
+++ b/visualvm/nbproject/project.properties
@@ -3,9 +3,9 @@ app.name=visualvm
 app.title=VisualVM
 branding.token=${app.name}
 modules=\
-    ${project.org.netbeans.modules.management}:\
-    ${project.org.netbeans.modules.management.appui}:\
-    ${project.org.netbeans.modules.management.startup}:\
+    ${project.com.sun.tools.visualvm.core}:\
+    ${project.com.sun.tools.visualvm.modules.appui}:\
+    ${project.com.sun.tools.visualvm.modules.startup}:\
     ${project.com.sun.tools.visualvm.application}:\
     ${project.com.sun.tools.visualvm.host}:\
     ${project.com.sun.tools.visualvm.coredump}:\
@@ -36,9 +36,9 @@ project.com.sun.tools.visualvm.profiler=profiler
 project.com.sun.tools.visualvm.sa=sa
 project.com.sun.tools.visualvm.threaddump=threaddump
 project.com.sun.tools.visualvm.tools=tools
-project.org.netbeans.modules.management=core
-project.org.netbeans.modules.management.appui=appui
-project.org.netbeans.modules.management.startup=startup
+project.com.sun.tools.visualvm.core=core
+project.com.sun.tools.visualvm.modules.appui=appui
+project.com.sun.tools.visualvm.modules.startup=startup
 
 visualvm-platform=../plugins/
 
