--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -1,4 +1,5 @@
 modules=\
+    ${project.net.java.visualvm.modules.glassfish}:\
     ${project.com.sun.tools.visualvm.modules.jconsole}:\
     ${project.com.sun.tools.visualvm.modules.mbeans}:\
     ${project.com.sun.appserv.management}:\
@@ -20,6 +21,7 @@ project.com.sun.tools.visualvm.modules.mbeans=mbeans
 project.com.sun.tools.visualvm.modules.oqlsyntax=oqlsyntax
 project.com.sun.tools.visualvm.modules.sampler=visualvm-sampler
 project.com.sun.tools.visualvm.modules.systray=systray
+project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
 project.org.netbeans.modules.consumerentrypoints=consumerentrypoints
 project.org.netbeans.modules.consumervisualvm=consumervisualvm
