Application & Host Views: shorter chart items names
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1923 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
@@ -48,30 +48,46 @@ LBL_Heap_Dump=Heap Dump
 
 LBL_Uptime=Uptime
 
-LBL_Heap_size=Heap size
+LBL_Heap_size=Size
 
-LBL_Used_heap=Used heap
+LBL_Used_heap=Used
 
-LBL_Max_Heap=Max heap
+LBL_Heap_size_leg=Heap size
 
-LBL_PermGen_size=PermGen size
+LBL_Used_heap_leg=Used heap
 
-LBL_Used_PermGen=Used PermGen
+LBL_Max_Heap=Max
 
-LBL_Max_PermGen_size=Max PermGen size
+LBL_PermGen_size=Size
 
-LBL_Total_loaded_classes=Total loaded classes
+LBL_Used_PermGen=Used
 
-LBL_Shared_loaded_classes=Shared loaded classes
+LBL_PermGen_size_leg=PermGen size
 
-LBL_Total_unloaded_classes=Total unloaded classes
+LBL_Used_PermGen_leg=Used PermGen
 
-LBL_Shared_unloaded_classes=Shared unloaded classes
+LBL_Max_PermGen_size=Max
 
-LBL_Live_threads=Live threads
+LBL_Total_loaded_classes=Total loaded
 
-LBL_Daemon_threads=Daemon threads
+LBL_Shared_loaded_classes=Shared loaded
 
-LBL_Live_threads_peak=Live threads peak
+LBL_Total_unloaded_classes=Total unloaded
 
-LBL_Started_threads_total=Started threads total
+LBL_Shared_unloaded_classes=Shared unloaded
+
+LBL_Total_loaded_classes_leg=Total loaded classes
+
+LBL_Shared_loaded_classes_leg=Shared loaded classes
+
+LBL_Live_threads=Live
+
+LBL_Daemon_threads=Daemon
+
+LBL_Live_threads_peak=Live peak
+
+LBL_Started_threads_total=Total started
+
+LBL_Live_threads_leg=Live threads
+
+LBL_Daemon_threads_leg=Daemon threads
