--- a/visualvm/hostviews/src/com/sun/tools/visualvm/host/views/overview/Bundle.properties
+++ b/visualvm/hostviews/src/com/sun/tools/visualvm/host/views/overview/Bundle.properties
@@ -24,9 +24,13 @@
 
 LBL_Load_average=Load average
 
-LBL_Used_memory=Used memory
+LBL_Used_memory=Used
 
-LBL_Used_swap=Used swap
+LBL_Used_memory_leg=Used memory
+
+LBL_Used_swap=Used
+
+LBL_Used_swap_leg=Used swap
 
 LBL_Overview=Overview
 
@@ -54,8 +58,8 @@ LBL_CPU_load=CPU load
 
 LBL_Physical_memory=Physical memory
 
-LBL_Total_memory=Total memory
+LBL_Total_memory=Total
 
-LBL_Total_swap=Total swap
+LBL_Total_swap=Total
 
 LBL_Swap_memory=Swap memory
