Proxy settings panel fixes, tweaks, A11Y, I18N
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1953 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/options/Bundle.properties
+++ b/visualvm/appui/src/com/sun/tools/visualvm/modules/appui/options/Bundle.properties
@@ -24,3 +24,20 @@
 
 OptionsCategory_Name_Network=Network
 OptionsCategory_Title_Network=Network
+
+NetworkOptionsPanel_ProxySettingsCaption=Proxy Settings
+NetworkOptionsPanel_NoProxyRadio=&No proxy
+NetworkOptionsPanel_SystemProxyRadio=&Use system proxy settings
+NetworkOptionsPanel_ManualProxyRadio=&Manual proxy settings\:
+NetworkOptionsPanel_HttpProxy=&HTTP Proxy\:
+NetworkOptionsPanel_HttpProxyPort=&Port\:
+NetworkOptionsPanel_SameSettingsCheckbox=Use the same proxy settings for &all protocols
+NetworkOptionsPanel_HttpsProxy=HTTP&S Proxy\:
+NetworkOptionsPanel_HttpsProxyPort=P&ort\:
+NetworkOptionsPanel_SocksProxy=SOC&KS Proxy\:
+NetworkOptionsPanel_SocksProxyPort=Po&rt\:
+NetworkOptionsPanel_NoProxyHosts=No Pro&xy hosts\:
+NetworkOptionsPanel_NoProxyHint=(e.g. localhost, *.dev.java.net, 127.0.0.1)
+NetworkOptionsPanel_AuthCheckbox=Proxy re&quires authentication\:
+NetworkOptionsPanel_Username=Us&ername\:
+NetworkOptionsPanel_Password=Pass&word\:
