Fixed Issue 270  - time abbrevs from bundle
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1957 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
+++ b/visualvm/applicationviews/src/com/sun/tools/visualvm/application/views/monitor/Bundle.properties
@@ -91,3 +91,6 @@ LBL_Started_threads_total=Total started
 LBL_Live_threads_leg=Live threads
 
 LBL_Daemon_threads_leg=Daemon threads
+
+FORMAT_hms={0} hrs {1} min {2} sec
+FORMAT_ms={0} min {1} sec
