--- a/visualvm/core/src/com/sun/tools/visualvm/core/options/Bundle.properties
+++ b/visualvm/core/src/com/sun/tools/visualvm/core/options/Bundle.properties
@@ -24,17 +24,17 @@
 
 OptionsCategory_Name_Core=General
 OptionsCategory_Title_Core=VisualVM
-LBL_Monitored_Host=Monitored &Host:
+LBL_Monitored_Host=Monitored &Host\:
 LBL_Sec=sec.
-LBL_Threads=&Threads:
-LBL_Monitored_Data=Monitored &Data:
+LBL_Threads=Thread&s\:
+LBL_Monitored_Data=Monitored &Data\:
 LBL_Polling=Polling
 LBL_Charts_Cache=Charts Cache
-LBL_Monitored_Host2=Monitored H&ost:
+LBL_Monitored_Host2=Monitored H&ost\:
 LBL_min=min.
-LBL_Monitored_Data2=Monitored D&ata:
+LBL_Monitored_Data2=Monitored D&ata\:
 LBL_Profiler=Profiler
-MSG_Do_Not_Show_Again=Reset Do Not Show Again confirmations:
+MSG_Do_Not_Show_Again=Reset Do Not Show Again confirmations\:
 BTN_Reset=&Reset
 BTN_Reset2=R&eset
-LBL_ResetData=Reset calibration data:
+LBL_ResetData=Reset calibration data\:
