Updating suite nbplatform
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1978 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/nbproject/platform.properties
+++ b/visualvm/nbproject/platform.properties
@@ -15,7 +15,7 @@ enabled.clusters=\
     platform10,\
     profiler3
 nbjdk.active=default
-nbplatform.active=NetBeans_Platform_6.7_RC1_(Build_090526)
+nbplatform.active=NetBeans_Platform_6.7_(Build_090630)
 suite.dir=${basedir}
 netbeans.dest.dir=${suite.dir}/netbeans
 harness.dir=${netbeans.dest.dir}/harness
