Extracting Caching API, modifying Custom Application Type module accordingly
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1990 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/nbproject/project.properties
+++ b/visualvm/nbproject/project.properties
@@ -20,7 +20,9 @@ modules=\
     ${project.com.sun.tools.visualvm.tools}:\
     ${project.com.sun.tools.visualvm.host.views}:\
     ${project.com.sun.tools.visualvm.jvm}:\
-    ${project.com.sun.tools.visualvm.charts}
+    ${project.com.sun.tools.visualvm.charts}:\
+    ${project.com.sun.tools.visualvm.api.caching}
+project.com.sun.tools.visualvm.api.caching=caching.api
 project.com.sun.tools.visualvm.application=application
 project.com.sun.tools.visualvm.applicationviews=applicationviews
 project.com.sun.tools.visualvm.attach=attach
