VisualVM-JMX major changes  - support for customized dialogs for new JMX connection  - support for customizing JMX environment map  - fixed non-persistent JmxApplication storage  - changed package names, minor refactoring
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@1997 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/impl/Bundle.properties
@@ -42,20 +42,10 @@ MSG_Invalid_JMX_connection=Invalid JMX connection\: {0}
 
 MSG_Cannot_resolve_host=Cannot resolve host\: {0}
 
-MSG_JMX_connection=JMX connection 
+MSG_connection_already_exists=JMX connection {0} already exists as {1}
 
-MSG_already_exists=\ already exists as 
+MSG_Cannot_connect_using=Cannot connect to {0} using {1}
 
-MSG_Cannot_connect_using=Cannot connect using 
-
-LBL_Connection=&Connection\:
-
-LBL_Usage=<html><nobr><b>Usage</b>: &lt;hostname&gt;:&lt;port&gt; OR service:jmx:&lt;protocol&gt;:&lt;sap&gt;</nobr></html>
-
-LBL_Display_name=&Display name\:
-
-LBL_Use_security_credentials=Us&e security credentials
-
-LBL_Save_security_credentials=&Save security credentials
+LBL_Connection_type=Connection &type\:
 
 MSG_OPENJMX=open application specified by JMX connection (host:port)
