--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/Bundle.properties
@@ -25,3 +25,21 @@
 OpenIDE-Module-Name=VisualVM-JMX
 
 LBL_Adding=Adding {0}...
+
+LBL_Username=&Username\:
+
+LBL_Password=&Password\:
+
+LBL_Connection=&Connection\:
+
+LBL_Usage=<html><nobr><b>Usage</b>: &lt;hostname&gt;:&lt;port&gt; OR service:jmx:&lt;protocol&gt;:&lt;sap&gt;</nobr></html>
+
+LBL_Display_name=&Display name\:
+
+LBL_Use_security_credentials=Us&e security credentials
+
+LBL_Save_security_credentials=&Save security credentials
+
+LBL_Default_jmx_connection_name=Default Connection
+
+LBL_Default_jmx_connection_descr=Connection based on JMX url and optional credentials
