VisualVM-JMX: Default JMX connection description updated
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2000 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/visualvm/jmx/src/com/sun/tools/visualvm/jmx/Bundle.properties
+++ b/visualvm/jmx/src/com/sun/tools/visualvm/jmx/Bundle.properties
@@ -42,4 +42,4 @@ LBL_Save_security_credentials=&Save security credentials
 
 LBL_Default_jmx_connection_name=Default Connection
 
-LBL_Default_jmx_connection_descr=Connection based on JMX url and optional credentials
+LBL_Default_jmx_connection_descr=Customizable JMX url and credentials
