New plugin VisualVM-Security
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2006 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/nbproject/project.properties
+++ b/plugins/nbproject/project.properties
@@ -11,13 +11,15 @@ modules=\
     ${project.com.sun.tools.visualvm.application.type.custom}:\
     ${project.com.sun.tools.visualvm.modules.customtype.lib}:\
     ${project.jsyntaxpane.lib}:\
-    ${project.com.sun.tools.visualvm.modules.oqlsyntax}
+    ${project.com.sun.tools.visualvm.modules.oqlsyntax}:\
+    ${project.com.sun.tools.visualvm.modules.security}
 project.com.sun.appserv.management=glassfish/amx-api
 project.com.sun.tools.visualvm.application.type.custom=extapptypes
 project.com.sun.tools.visualvm.modules.customtype.lib=extapptypes.lib
 project.com.sun.tools.visualvm.modules.jconsole=jconsole
 project.com.sun.tools.visualvm.modules.mbeans=mbeans
 project.com.sun.tools.visualvm.modules.oqlsyntax=oqlsyntax
+project.com.sun.tools.visualvm.modules.security=security
 project.com.sun.tools.visualvm.modules.systray=systray
 project.net.java.visualvm.modules.glassfish=glassfish
 project.jsyntaxpane.lib=jsyntaxpane-lib
