--- a/plugins/mbeans/src/com/sun/tools/visualvm/modules/mbeans/options/Bundle.properties
+++ b/plugins/mbeans/src/com/sun/tools/visualvm/modules/mbeans/options/Bundle.properties
@@ -24,9 +24,8 @@
 
 OptionsCategory_Name_MBeans=MBeans
 OptionsCategory_Title_MBeans=MBeans Settings
-LBL_Polling=Polling
-LBL_Plotters=Plotters:
+LBL_MBeansBrowser=MBeans Browser
+LBL_Plotters=&Plotters polling period\:
 LBL_Sec=sec.
-LBL_MBeans_Tree=MBeans Tree
-LBL_Ordered_Key_Property_List=Ordered Key Property List:
-MSG_Comma-separated_list_of_keys=Comma-separated list of keys
+LBL_Ordered_Key_Property_List=&Ordered key property list\:
+MSG_CommaSeparatedListOfKeys=Comma-separated list of keys
