Improved JConsole Plugins Container appearance - Options & DataSourceView
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2020 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/jconsole/src/com/sun/tools/visualvm/modules/jconsole/Bundle.properties
+++ b/plugins/jconsole/src/com/sun/tools/visualvm/modules/jconsole/Bundle.properties
@@ -24,10 +24,12 @@
 
 OpenIDE-Module-Display-Category=Tools
 OpenIDE-Module-Long-Description=\
-    This VisualVM plugin for JConsole allows to integrate the custom JConsole plugins into VisualVM.
+    A plugin to enable using custom JConsole plugins in VisualVM. Use "Tools | Options | JConsole Plugins" to manage the JConsole plugins.
 OpenIDE-Module-Name=VisualVM-JConsole
-OpenIDE-Module-Short-Description=JConsole Plugins
+OpenIDE-Module-Short-Description=JConsole Plugins Container
 
 JMX_Not_Available=Data not available because JMX connection to the JMX agent could not be established.
-PluginPath_Not_Available=No JConsole plug-in installed.\n\nTo install a JConsole plug-in, choose \"Tools | Options\" from the main menu, then click on the \"JConsole Plugins\" icon.
+NoPluginInstalled=No JConsole plug-in installed.
+InstallPluginHint=To install a JConsole plug-in, click the Configure Plugins button and provide full path to the plugin file/directory.
+ConfigurePlugins=Configure Plugins
 JConsole_Plugins=JConsole Plugins
