--- a/plugins/jconsole/src/com/sun/tools/visualvm/modules/jconsole/options/Bundle.properties
+++ b/plugins/jconsole/src/com/sun/tools/visualvm/modules/jconsole/options/Bundle.properties
@@ -25,11 +25,12 @@
 OptionsCategory_Name_JConsole=JConsole Plugins
 OptionsCategory_Title_JConsole=JConsole Plugins Settings
 
-JConsoleCustomizer.border.title=JConsole Options
-JConsoleCustomizer.periodLabel.text=Polling Period (sec):
-JConsoleCustomizer.pathLabel.text=Plugins Path\:
-JConsoleCustomizer.jButtonAddJar.text=Add &JAR/Folder
-JConsoleCustomizer.jButtonMoveUp.text=M&ove Up
-JConsoleCustomizer.jButtonMoveDown.text=Move Do&wn
-JConsoleCustomizer.jButtonRemove.actionCommand=R&emove
-JConsoleCustomizer.jButtonRemove.text=R&emove
+CAP_PluginsContainer=JConsole Plugins Container
+LAB_PollingPeriod=&Polling period\:
+LAB_PollingUnits=sec.
+LAB_PluginsPath=P&lugins path\:
+BTN_Add=&Add JAR/Folder
+BTN_Remove=&Remove
+BTN_MoveUp=Move &Up
+BTN_MoveDown=Move &Down
+FIL_PluginFileFilterDescr=JConsole plugin (*.jar or directory)
