JConsole: plug-in -> plugin
git-svn-id: https://svn.java.net/svn/visualvm~svn/trunk@2021 ba0df5e5-9053-6d9f-941f-f112716aa91a

--- a/plugins/jconsole/src/com/sun/tools/visualvm/modules/jconsole/Bundle.properties
+++ b/plugins/jconsole/src/com/sun/tools/visualvm/modules/jconsole/Bundle.properties
@@ -29,7 +29,7 @@ OpenIDE-Module-Name=VisualVM-JConsole
 OpenIDE-Module-Short-Description=JConsole Plugins Container
 
 JMX_Not_Available=Data not available because JMX connection to the JMX agent could not be established.
-NoPluginInstalled=No JConsole plug-in installed.
-InstallPluginHint=To install a JConsole plug-in, click the Configure Plugins button and provide full path to the plugin file/directory.
+NoPluginInstalled=No JConsole plugin installed.
+InstallPluginHint=To install a JConsole plugin, click the Configure Plugins button and provide full path to the plugin file/directory.
 ConfigurePlugins=Configure Plugins
 JConsole_Plugins=JConsole Plugins
